# vmd-plugins

./: CMakeLists.txt  README.md
include/: PlugIOManagerInit.h  molfile_plugin.h
src/: PlugIOManagerInit.c  dcdplugin.c  jsplugin.c  moldenplugin.c  pdbplugin.c  plyplugin.cpp
